--- a/i18n-spigot/pom.xml
+++ b/i18n-spigot/pom.xml
@@ -77,13 +77,12 @@
         </repository>
         <repository>
             <id>dmulloy2-repo</id>
-            <name>DMulloy2 Public Repository</name>
-            <url>http://repo.dmulloy2.net/content/groups/public/</url>
+            <url>https://repo.dmulloy2.net/repository/public/</url>
         </repository>
         <repository>
             <id>blackypaw-repo</id>
             <name>BlackyPaw Public Repository</name>
-            <url>http://repo.blackypaw.com/content/groups/public/</url>
+            <url>https://repo.blackypaw.com/content/groups/public/</url>
         </repository>
     </repositories>
 
@@ -111,7 +110,7 @@
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
-            <version>4.3.0-SNAPSHOT</version>
+            <version>4.8.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
